--- a/apps/user-side/package.json
+++ b/apps/user-side/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "bcrypt": "^5.1.1",
     "next": "^14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@next-wallet/db": "*",
     "@next/eslint-plugin-next": "^14.1.1",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "@next-wallet/db":"*",
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
